--- a/SportClub/appsettings.json
+++ b/SportClub/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SportClubDbContext": "Server=(localdb)\\mssqllocaldb;Database=SportClubDbContext-8de8e8ea-34dd-4d31-bd0b-13aa125a3f5b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SportClubDbContext": "$CONNECTION_STRING"
   }
 }
